--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/BTweb/img/logoutc2.ico" type="image/x-icon">
+    <link rel="icon" href="/img/logoutc2.ico" type="image/x-icon">
     <title>UTC2 by haiDang</title>
-    <link rel="stylesheet" href="/BTweb/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-XXX" crossorigin="anonymous" />
 </head>
 <body>
     <div class="header">
         <div id="container">
             <a href="#" class="header-band">
-                <img src="/BTweb/img/logo.png" alt="logo utc2" width="44" height="44">
+                <img src="/img/logo.png" alt="logo utc2" width="44" height="44">
                 <div class="header-band-text">
                     <p style="color: white;">Trường đại học giao thông vận tải</p>
                     <p style="color: yellow;">phân hiệu tại tp. Hồ chí minh</p>
@@ -25,7 +25,7 @@
                     <li><a href="#">Thư viện</a></li>
                     <li><a href="#">Nguyên cứu</a></li>
                     <li><a href="#">Đảng-Đoàn thể</a></li>
-                    <li><a href="/BTweb/html/noibo.html">Nội bộ</a></li>
+                    <li><a href="/html/noibo.html">Nội bộ</a></li>
                     <li><a href="/ktra/index.html">Đăng ký</a></li>
                 </ul>
             </div>
@@ -33,19 +33,19 @@
     </div>
     <div class="after-nav">
         <ul>
-            <li><a href="/BTweb/html/gthieu.html" target="_top">Giới thiệu chung</a></li>
+            <li><a href="/html/gthieu.html" target="_top">Giới thiệu chung</a></li>
             <li><a href="">Đào tạo</a></li>
             <li><a href="">Đời sống sinh viên</a></li>
             <li><a href="">Tuyển sinh</a></li>
-            <li><a href="/BTweb/html/news.html" target="_top">Tin tức - Sự Kiện</a></li>
+            <li><a href="/html/news.html" target="_top">Tin tức - Sự Kiện</a></li>
             <li><a href="">Lịch công tác</a></li>
             <li><a href="">UTC2 360</a></li>
         </ul>
     </div>
     <div class="body">
         <div>
-        <img class="mySlides" src="/BTweb/img/body2.webp" alt="amh">
-        <img class="mySlides" src="/BTweb/img/body1.webp" alt="anh">
+        <img class="mySlides" src="/img/body2.webp" alt="amh">
+        <img class="mySlides" src="/img/body1.webp" alt="anh">
         <div>
     <div class="search-key-container">
         <h3 class="search-key">Từ khóa được tìm kiếm nhiều nhất</h3>
@@ -62,26 +62,26 @@
     <div class="cover">
     <div class="certificate-content">
         <div class="certificate-image">
-            <a href="/BTweb/img/certificate1.jpeg" target="_top">
-                <img src="/BTweb/img/certificate1.jpeg" alt="anh1" width="150" height="150" class="anh">
+            <a href="/img/certificate1.jpeg" target="_top">
+                <img src="/img/certificate1.jpeg" alt="anh1" width="150" height="150" class="anh">
             </a>
             <h6 class="tieude">Kiểm định chất lượng Trường đại học GTVT</h6>
         </div>
         <div class="certificate-image">
-            <a href="/BTweb/img/certificate2.jpeg" target="_top">
-                <img src="/BTweb/img/certificate2.jpeg" alt="certificate" width="150" height="150" class="anh">
+            <a href="/img/certificate2.jpeg" target="_top">
+                <img src="/img/certificate2.jpeg" alt="certificate" width="150" height="150" class="anh">
             </a>
             <h6 class="tieude">Chứng nhận kiểm định chất lượng đào tạo theo chuẩn quốc tế (AUN - QA) ngành Kỹ thuật Oto</h6>
         </div>
         <div class="certificate-image">
-            <a href="/BTweb/img/certificate3.jpeg" target="">
-                <img src="/BTweb/img/certificate3.jpeg" alt="certificate" width="150" height="150" class="anh">
+            <a href="/img/certificate3.jpeg" target="">
+                <img src="/img/certificate3.jpeg" alt="certificate" width="150" height="150" class="anh">
             </a>
             <h6 class="tieude">Chứng nhận kiểm định chất lượng đào tạo theo chuẩn quốc tế (AUN - QA) ngành Kỹ thuật xây dựng Công trình giao thông</h6>
         </div>
         <div class="certificate-image">
-            <a href="/BTweb/img/certificate4.jpeg" target="">
-                <img src="/BTweb/img/certificate4.jpeg" alt="certificate" width="150" height="150" class="anh">
+            <a href="/img/certificate4.jpeg" target="">
+                <img src="/img/certificate4.jpeg" alt="certificate" width="150" height="150" class="anh">
             </a>
             <h6 class="tieude">Chứng nhận kiểm định chất lượng đào tạo theo chuẩn quốc tế (AUN - QA) ngành Kỹ thuật điều khiển và Tự động hóa</h6>
         </div>
@@ -97,7 +97,7 @@
                 <h5>Đại học chính quy</h5>
                 <a href="https://tuyensinh.utc2.edu.vn/vi/nganh-dao-tao-312" target="_blank" class="timhieuthem">
                     <span>Tìm hiểu thêm</span>
-                    <img src="/BTweb/img/arrow.svg" alt="arrow">
+                    <img src="/img/arrow.svg" alt="arrow">
                     <i class="fa-regular fa-arrow-right"></i>
                 </a>
             </div>
@@ -107,7 +107,7 @@
                 <h5>Sau đại học</h5>
                 <a href="" target="_blank" class="timhieuthem">
                     <span>Tìm hiểu thêm</span>
-                    <img src="/BTweb/img/arrow.svg" alt="arrow">
+                    <img src="/img/arrow.svg" alt="arrow">
                     <i class="fa-regular fa-arrow-right"></i>
                 </a>
             </div>
@@ -117,7 +117,7 @@
                 <h5>Bằng hai - liên thông</h5>
                 <a href="#" target="_blank" class="timhieuthem">
                     <span>Tìm hiểu thêm</span>
-                    <img src="/BTweb/img/arrow.svg" alt="arrow">
+                    <img src="/img/arrow.svg" alt="arrow">
                     <i class="fa-regular fa-arrow-right"></i>
                 </a>
             </div>
@@ -128,7 +128,7 @@
     <div class="body3">
         <div class="body3-left">
             <div class="boder-image"></div>
-            <img src="/BTweb/img/body3.png" alt="picture" width="500" height="350">
+            <img src="/img/body3.png" alt="picture" width="500" height="350">
         </div>
         <div class="body3-right">
             <h4 style="margin-bottom: 25px; text-align: left;">Giá trị cốt lõi</h4>
@@ -218,7 +218,7 @@
                 bên cạnh đó nhà trường cũng hỗ trợ trang thiết bị giảng dạy hiện đại góp phần nâng cao chất lượng học tập. Với mức
                 học phí và điều kiện học tập tốt như thế thì UTC2 là một lựa chọn tuyệt vời cho học sinh cuối cấp 3 nha."</p>
             <div class="info-sudent">
-                <img src="/BTweb/img/avata.jpg" alt="Student UTC2" width="150" height="150" 
+                <img src="/img/avata.jpg" alt="Student UTC2" width="150" height="150" 
                 style="margin-bottom: 10px; border-radius: 50%;">
                 <p style="font-size: 20px;">Đinh Nguyễn Hải Đăng</p>
                 <p>Công nghệ thông tin K63</p>
@@ -278,7 +278,7 @@
             </div>
         </div>
         <div class="buttom-news">
-            <a href="/BTweb//html/news.html">Xem tất cả tin tức</a>
+            <a href="//html/news.html">Xem tất cả tin tức</a>
         </div>
     </div>
     <div class="connect-container">
@@ -316,7 +316,7 @@
             <div class="footer-row">
                 <div class="first-row">
                     <div class="brand">
-                        <img src="/BTweb/img/logo.png" alt="logo" width="44" height="44" >
+                        <img src="/img/logo.png" alt="logo" width="44" height="44" >
                         <div class="brand-text" style="margin-left: 10px;">
                             <div>
                                 <span>Trường đại học giao thông vận tải</span>
@@ -412,6 +412,6 @@
         </div>
     </div>
     <button id="scrollTopBtn">&#94;</button>
-    <script src="/BTweb/css/js.js"></script>
+    <script src="/css/js.js"></script>
 </body>
 </html>
