--- a/gthieu.html
+++ b/gthieu.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/BTweb/img/logoutc2.ico" type="image/x-icon">
+    <link rel="icon" href="./img/logoutc2.ico" type="image/x-icon">
     <title>Giới thiệu</title>
-    <link rel="stylesheet" href="/BTweb/css/style2.css">
+    <link rel="stylesheet" href="./css/style2.css">
 </head>
 <body>
     <div class="header">
         <div id="container">
-            <a href="/BTweb/html/index.html" class="header-band">
-                <img src="/BTweb/img/logo.png" alt="logo utc2" width="44" height="44">
+            <a href="./index.html" class="header-band">
+                <img src="./img/logo.png" alt="logo utc2" width="44" height="44">
                 <div class="header-band-text">
                     <p style="color: white;">Trường đại học giao thông vận tải</p>
                     <p style="color: yellow;">phân hiệu tại tp. Hồ chí minh</p>
@@ -24,7 +24,7 @@
                     <li><a href="#">Thư viện</a></li>
                     <li><a href="#">Nguyên cứu</a></li>
                     <li><a href="#">Đảng-Đoàn thể</a></li>
-                    <li><a href="/BTweb/html/noibo.html">Nội bộ</a></li>
+                    <li><a href="./noibo.html">Nội bộ</a></li>
                     <li><a href="#"><i class="fa-thin fa-magnifying-glass"></i></a></li>
                 </ul>
             </div>
@@ -33,18 +33,18 @@
         <div class="nav">
             <div class="nav-container">
                 <ul class="nav-content">
-                    <li class="aa"><a href="/BTweb/html/gthieu.html">Giới thiệu chung</a></li>
+                    <li class="aa"><a href="./gthieu.html">Giới thiệu chung</a></li>
                     <li><a href="">Đào tạo</a></li>
                     <li><a href="">Đời sống sinh viên</a></li>
                     <li><a href="">Tuyển sinh</a></li>
-                    <li><a href="/BTweb/html/news.html">Tin tức - sự kiện</a></li>
+                    <li><a href="./news.html">Tin tức - sự kiện</a></li>
                     <li><a href="">Lịch công tác</a></li>
                     <li><a href="">UTC2 360</a></li>
                 </ul>
             </div>
         </div>
         <div>
-            <img src="/BTweb/img/background.png" alt="background" width="1490" height="500">
+            <img src="./img/background.png" alt="background" width="1490" height="500">
         </div>
         <div class="main-content">
             <div >
@@ -190,7 +190,7 @@
                     </div>
                 </div>
                 <div class="buttom-news">
-                    <a href="/BTweb/html/news.html">Xem tất cả tin tức</a>
+                    <a href="./news.html">Xem tất cả tin tức</a>
                 </div>
                 <div class="square"></div>
             </div>
@@ -200,7 +200,7 @@
                 <div class="footer-row">
                     <div class="first-row">
                         <div class="brand">
-                            <img src="/BTweb/img/logo.png" alt="logo" width="44" height="44" >
+                            <img src="./img/logo.png" alt="logo" width="44" height="44" >
                             <div class="brand-text" style="margin-left: 10px;">
                                 <div>
                                     <span>Trường đại học giao thông vận tải</span>
@@ -319,4 +319,4 @@
   });
     </script>
 </body>
-</html>
+<>
