--- a/noibo.html
+++ b/noibo.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/BTweb/img/logoutc2.ico" type="image/x-icon">
+    <link rel="icon" href="./img/logoutc2.ico" type="image/x-icon">
     <title>Nội Bộ</title>
-    <link rel="stylesheet" href="/BTweb/css/style4.css">
+    <link rel="stylesheet" href="./css/style4.css">
 </head>
 <body>
     <div class="header">
         <div id="container">
-            <a href="/BTweb/html/index.html" class="header-band">
-                <img src="/BTweb/img/logo.png" alt="logo utc2" width="44" height="44">
+            <a href="./index.html" class="header-band">
+                <img src="./img/logo.png" alt="logo utc2" width="44" height="44">
                 <div class="header-band-text">
                     <p style="color: white;">Trường đại học giao thông vận tải</p>
                     <p style="color: yellow;">phân hiệu tại tp. Hồ chí minh</p>
@@ -33,11 +33,11 @@
         <div class="nav">
             <div class="nav-container">
                 <ul class="nav-content">
-                    <li class="aa"><a href="/BTweb/html/gthieu.html">Giới thiệu chung</a></li>
+                    <li class="aa"><a href="./gthieu.html">Giới thiệu chung</a></li>
                     <li><a href="">Đào tạo</a></li>
                     <li><a href="">Đời sống sinh viên</a></li>
                     <li><a href="">Tuyển sinh</a></li>
-                    <li><a href="/BTweb/html/news.html">Tin tức - sự kiện</a></li>
+                    <li><a href="./news.html">Tin tức - sự kiện</a></li>
                     <li><a href="">Lịch công tác</a></li>
                     <li><a href="">UTC2 360</a></li>
                 </ul>
@@ -45,7 +45,7 @@
         </div>
     <div style="width: 1490px; height: 500px; position: relative;" class="banner">
         <picture>
-            <img src="/BTweb/img/noibo.webp" alt="picture" style="overflow: hidden; width: 100%; height: 100%; object-fit: cover;">
+            <img src="./img/noibo.webp" alt="picture" style="overflow: hidden; width: 100%; height: 100%; object-fit: cover;">
             <h4>Nội Bộ <br>
             <p style="font-size: 18px;">Trường đại học giao thông vận tải là nơi tuyệt vời để khám phá tiềm năng
             bản thân và trải nghiệm đời sinh viên đầy màu sắc</p>
@@ -154,7 +154,7 @@
             </div>
         </div>
         <div class="buttom-news">
-            <a href="/BTweb/html/news.html">Xem tất cả tin tức</a>
+            <a href="./news.html">Xem tất cả tin tức</a>
         </div>
     </div>
     <div class="footer">
@@ -162,7 +162,7 @@
             <div class="footer-row">
                 <div class="first-row">
                     <div class="brand">
-                        <img src="/BTweb/img/logo.png" alt="logo" width="44" height="44" >
+                        <img src="./img/logo.png" alt="logo" width="44" height="44" >
                         <div class="brand-text" style="margin-left: 10px;">
                             <div>
                                 <span>Trường đại học giao thông vận tải</span>
@@ -259,4 +259,4 @@
     </div>
 <button id="scrollTopBtn">&#94;</button>
 </body>
-</html>
+<>
