--- a/news.html
+++ b/news.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/BTweb/img/logoutc2.ico" type="image/x-icon">
+    <link rel="icon" href="./img/logoutc2.ico" type="image/x-icon">
     <title>News</title>
-    <link rel="stylesheet" href="/BTweb/css/style3.css">
+    <link rel="stylesheet" href="./css/style3.css">
 </head>
 <body>
     <div class="header">
         <div id="container">
-            <a href="/BTweb/html/index.html" class="header-band">
-                <img src="/BTweb/img/logo.png" alt="logo utc2" width="44" height="44">
+            <a href="./index.html" class="header-band">
+                <img src="./img/logo.png" alt="logo utc2" width="44" height="44">
                 <div class="header-band-text">
                     <p style="color: white;">Trường đại học giao thông vận tải</p>
                     <p style="color: yellow;">phân hiệu tại tp. Hồ chí minh</p>
@@ -24,7 +24,7 @@
                     <li><a href="#">Thư viện</a></li>
                     <li><a href="#">Nguyên cứu</a></li>
                     <li><a href="#">Đảng-Đoàn thể</a></li>
-                    <li><a href="/BTweb/html/noibo.html">Nội bộ</a></li>
+                    <li><a href="./noibo.html">Nội bộ</a></li>
                     <li><a href="#"><i class="fa-thin fa-magnifying-glass"></i></a></li>
                 </ul>
             </div>
@@ -33,7 +33,7 @@
     <div class="nav">
         <div class="nav-container">
             <ul class="nav-content">
-                <li ><a href="/BTweb/html/gthieu.html">Giới thiệu chung</a></li>
+                <li ><a href="./gthieu.html">Giới thiệu chung</a></li>
                 <li><a href="">Đào tạo</a></li>
                 <li><a href="">Đời sống sinh viên</a></li>
                 <li><a href="">Tuyển sinh</a></li>
@@ -45,15 +45,15 @@
     </div>
         <div  class="news-baner">
             <h4>Tin tức nổi bật</h4>
-            <img class="mySlides" src="/BTweb/img/slide1.png" alt="">
-            <img class="mySlides" src="/BTweb/img/slide2.png" alt="">
+            <img class="mySlides" src="./img/slide1.png" alt="">
+            <img class="mySlides" src="./img/slide2.png" alt="">
         </div>
     <div class="main-content">
         <div class="top-content">   
             <ul class="body-task">
                 <li><a href="#">Trang chủ</a></li>
                 <li>/</li>
-                <li><a href="/BTweb/html/news.html">Tin tức - sự kiện</a></li>
+                <li><a href="./news.html">Tin tức - sự kiện</a></li>
             </ul>
         </div>
         <div class="grid">
@@ -177,7 +177,7 @@
             <div class="footer-row">
                 <div class="first-row">
                     <div class="brand">
-                        <img src="/BTweb/img/logo.png" alt="logo" width="44" height="44" >
+                        <img src="./img/logo.png" alt="logo" width="44" height="44" >
                         <div class="brand-text" style="margin-left: 10px;">
                             <div>
                                 <span>Trường đại học giao thông vận tải</span>
@@ -314,4 +314,4 @@ document.addEventListener("DOMContentLoaded", function() {
   });
     </script>
 </body>
-</html>
+<>
