--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#">Nguyên cứu</a></li>
                     <li><a href="#">Đảng-Đoàn thể</a></li>
                     <li><a href="./noibo.html">Nội bộ</a></li>
-                    <li><a href="./ktra/index.html">Đăng ký</a></li>
+                    <li><a href="./form.html">Đăng ký</a></li>
                 </ul>
             </div>
         </div>
